Provide complete solution to  Odin CSS exercise

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -8,13 +8,14 @@ body {
   font-weight: 800;
 }
 
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
 
 .para {
   font-size: 22px;
+}
+
+.small-para {
+  font-size: 14px;
+  font-weight: 800;
 }
 
 .confirm {
@@ -29,6 +30,14 @@ body {
   font-size: 20px;
 }
 
+.confirm.button {
+  background-color: green;
+  color: white;
+  font-weight: bold;
+}
+
+
+
 .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
@@ -39,4 +48,10 @@ div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+
+.child.text {
+  color: rgb(0, 0, 0);
+  font-size: 14px;
+  font-weight: 800;
 }
